// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateCurrencyPairsMidPrices calls first time 1`] = `
Object {
  "usdjpy": Array [
    Object {
      "midPrice": 3,
      "time": 132345321,
    },
  ],
}
`;

exports[`updateCurrencyPairsMidPrices filter the array for last 30 seconds 1`] = `
Object {
  "usdjpy": Array [
    Object {
      "midPrice": 9,
      "time": 1522516452157,
    },
  ],
}
`;

exports[`updateCurrencyPairsMidPrices update the array of same company 1`] = `
Object {
  "usdjpy": Array [
    Object {
      "midPrice": 3,
      "time": 1522516237111,
    },
    Object {
      "midPrice": 9,
      "time": 1522516227135,
    },
  ],
}
`;
